--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   </head>
 
   <body>
+
+      <h1>My favourite image slider</h1>
+
     <section class="section-content">
       <h1 class="Slider-title">Image Slider</h1>
       <div class="image-icon">
